[package]
name = "deliminator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "std"], default-features = false }
csv = "1.2.1"
dirs = "5.0.1"
indicatif = "0.17.7"
rayon = "1.8.0"

[profile.release]
lto = true
opt-level = "z"

[[bin]]
name = "deliminator"
path = "src/main.rs"

